[project]
name = "langchain-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=26.5.0",
    "isort>=8.0.1",
    "langchain>=1.3.1",
    "langchain-ollama>=0.3.0",
    "langchain-openai>=1.2.1",
    "python-dotenv>=1.2.2",
]
